// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RelativeTooltip should render correctly at the different stages of animation 1`] = `
<span
  class="rmd-tooltip rmd-tooltip--bottom"
  id="tooltip-id"
  role="tooltip"
>
  Tooltip
</span>
`;

exports[`RelativeTooltip should render correctly at the different stages of animation 2`] = `
<span
  class="rmd-tooltip rmd-tooltip--bottom"
  id="tooltip-id"
  role="tooltip"
>
  Tooltip
</span>
`;

exports[`RelativeTooltip should render correctly at the different stages of animation 3`] = `
<span
  class="rmd-tooltip rmd-tooltip--bottom rmd-tooltip--active rmd-tooltip--enter"
  id="tooltip-id"
  role="tooltip"
>
  Tooltip
</span>
`;

exports[`RelativeTooltip should render correctly at the different stages of animation 4`] = `
<span
  class="rmd-tooltip rmd-tooltip--visible rmd-tooltip--bottom rmd-tooltip--active rmd-tooltip--enter"
  id="tooltip-id"
  role="tooltip"
>
  Tooltip
</span>
`;

exports[`RelativeTooltip should render correctly at the different stages of animation 5`] = `
<span
  class="rmd-tooltip rmd-tooltip--visible rmd-tooltip--bottom rmd-tooltip--active"
  id="tooltip-id"
  role="tooltip"
>
  Tooltip
</span>
`;

exports[`RelativeTooltip should render correctly at the different stages of animation 6`] = `
<span
  class="rmd-tooltip rmd-tooltip--bottom rmd-tooltip--active rmd-tooltip--leave"
  id="tooltip-id"
  role="tooltip"
>
  Tooltip
</span>
`;

exports[`RelativeTooltip should render correctly at the different stages of animation 7`] = `
<span
  class="rmd-tooltip rmd-tooltip--bottom"
  id="tooltip-id"
  role="tooltip"
>
  Tooltip
</span>
`;
